--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,16 @@ Source: libapache2-mod-geoip
 Section: httpd
 Priority: optional
 Maintainer: Prach Pongpanich <prachpub@gmail.com>
-Build-Depends: apache2-dev, debhelper (>= 7), libgeoip-dev (>=1.4.8)
+Build-Depends: apache2-dev,
+               debhelper (>= 7),
+               libgeoip-dev (>=1.4.8)
 Standards-Version: 3.9.4
 Homepage: http://www.maxmind.com/app/mod_geoip
 
 Package: libapache2-mod-geoip
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
 Description: GeoIP support for apache2
  This is an apache2 module for finding the country that a web request
  originated from. It uses the GeoIP library and database to perform
