Update get-orig-source, thank to Arno Töll

--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,12 @@
 #!/usr/bin/make -f
 
+
+# This makes no difference for usual debian/rules invokations, but the
+# get-orig-source target might be called from any directory by policy.
+ PACKAGE_ROOT := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
+ PACKAGE_ROOT := $(realpath $(PACKAGE_ROOT)/..)
+ VERSION := $(shell cd $(PACKAGE_ROOT) && dpkg-parsechangelog | perl -ne 'print $$1 if m/Version:\s*([\d\.]+)-\d+/')
+
 %:
 	dh $@ --with apache2
 
@@ -14,10 +21,24 @@ override_dh_auto_test:
 
 override_dh_auto_install:
 
-# Package version to use when building .orig.tar.gz
-VERSION = 1.2.8
-URL =  http://www.maxmind.com/download/geoip/api/mod_geoip2/mod_geoip2-latest.tar.gz
-
+# Get orig-source and check new upstream version 
 get-orig-source:
-	wget -N $(URL)
-	mv mod_geoip2-latest.tar.gz ../libapache2-mod-geoip_$(VERSION).orig.tar.gz
+	[ -n "$(VERSION)" ] || exit 1
+	set -e && ( \
+		CURDIR=`pwd` ;\
+		TMPDIR=`mktemp -d` ;\
+		cd $${TMPDIR} ;\
+		wget http://www.maxmind.com/download/geoip/api/mod_geoip2/mod_geoip2-latest.tar.gz ;\
+		LATEST=`tar tf mod_geoip2-latest.tar.gz | head -n1 | cut -d'_' -f3 | sed 's/\///g'` ;\
+		if [ "$(VERSION)" != "$${LATEST}" ] ; then \
+			echo "A new upstream version is available: $${LATEST}" ;\
+		fi ;\
+		if [ -f "$${CURDIR}/libapache2-mod-geoip_$(VERSION).orig.tar.gz" ] ; then\
+			echo "Cannot overwrite libapache2-mod-geoip_$(VERSION).orig.tar.gz: File exists" ;\
+		else\
+			echo "Generating libapache2-mod-geoip_$(VERSION).orig.tar.gz" ;\
+			wget http://www.maxmind.com/download/geoip/api/mod_geoip2/mod_geoip2_$(VERSION).tar.gz ;\
+			mv mod_geoip2_$(VERSION).tar.gz $${CURDIR}/libapache2-mod-geoip_$(VERSION).orig.tar.gz ;\
+		fi ;\
+		rm -rf $${TMPDIR} ;\
+	)
