--- a/debian/geoip.conf
+++ b/debian/geoip.conf
@@ -1,5 +1,8 @@
 <IfModule mod_geoip.c>
-  GeoIPEnable On
+  # For performance reasons, it's not recommended to turn GeoIP on serverwide,
+  # but rather only in <Location> or <Directory> blocks where it's actually
+  # needed.
+  GeoIPEnable Off
   #GeoIPDBFile /usr/share/GeoIP/GeoIP.dat
 </IfModule>
 
